Fix/not group by extern chug (#500)
* Add all extern ids to unique chugs

* If you show extern, show comment if exists, so we show the name

* Added scopes to model

* Rename and refactor chugtype chugs

* Podium list if statement update

* Update naming

* Forgot one

--- a/app/views/chugtypes/show.html.erb
+++ b/app/views/chugtypes/show.html.erb
@@ -55,7 +55,7 @@
         </div>
         <div class="hidden" data-tabs-target="panel" data-select-tabs-target="panel">
           <div class="md:pl-6">
-            <%= render 'chugs/podium_list', chugs: @chugs_unique %>
+            <%= render 'chugs/podium_list', chugs: @chugs_unique_sorted %>
           </div>
         </div>
         <div class="hidden" data-tabs-target="panel" data-select-tabs-target="panel">
