--- a/app/views/chugs/_form.html.erb
+++ b/app/views/chugs/_form.html.erb
@@ -10,7 +10,7 @@
       Tijd (in seconden)
     </div>
     <div class="w-full">
-      <%= f.text_field :time, step: :any, inputmode: 'decimal' ,class: input_classes, required: true, placeholder: "_.__",
+      <%= f.text_field :time, step: :any, inputmode: 'decimal' ,class: input_classes, required: true, placeholder: "_.__", value: @chug.time != 0.0 ? @chug.time : '', autofocus: true,
                        oninput: "this.value = this.value.replace(',','.')"
       %>
     </div>
