--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -50,7 +50,7 @@
               <%= f.submit 'Afwezig', class: 'cursor-pointer ml-4 inline-flex items-center px-4 py-2 border border-transparent text-sm font-bold rounded-md shadow-sm text-white bg-gray-400 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-gray-500' %>
             </div>
           <% end %>
-          <p class="text-center sm:text-right text-gray-500 py-2">Inschrijven kan tot <%= @event.deadline&.strftime('%d-%m-%Y %H:%M') || @event.date.strftime('%d-%m-%Y %H:%M') %></p>
+          <p class="text-center sm:text-right text-gray-500 py-2">Inschrijven kan tot <%= (@event.deadline || @event.date)&.strftime('%d-%m-%Y %H:%M') %></p>
         <% else %>
           <p class="text-center text-gray-500">De inschrijving is gesloten sinds <%= (@event.deadline || @event.date)&.strftime('%d-%m-%Y %H:%M') %>.</p>
         <% end %>
