--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -50,16 +50,16 @@
               <%= f.submit 'Afwezig', class: 'cursor-pointer ml-4 inline-flex items-center px-4 py-2 border border-transparent text-sm font-bold rounded-md shadow-sm text-white bg-gray-400 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-gray-500' %>
             </div>
           <% end %>
-          <p class="text-center sm:text-right text-gray-500 py-2">Inschrijven kan tot <%= @event.deadline&.strftime('%d-%m-%Y %H:%M') || @event.date.strftime('%d-%m-%Y %H:%M') %></p>
+          <p class="text-center sm:text-right text-gray-500 py-2">Inschrijven kan tot <%= (@event.deadline || @event.date).strftime('%d-%m-%Y %H:%M') %></p>
         <% else %>
-          <p class="text-center text-gray-500">De inschrijving is gesloten sinds <%= @event.deadline&.strftime('%d-%m-%Y %H:%M') %>.</p>
+          <p class="text-center text-gray-500">De inschrijving is gesloten sinds <%= (@event.deadline || @event.date).strftime('%d-%m-%Y %H:%M') %>.</p>
         <% end %>
       </div>
 
       <% if @event.location.present? %>
         <div class="pt-4 embed-responsive embed-responsive-4by3 hidden sm:block">
           <iframe class="embed-responsive-item w-full" height="256" style="border:0"
-                  src="https://www.google.com/maps/embed/v1/place?key=<%= Rails.application.secrets.google_api_key %>&q=<%= @event.location %>"
+                  src="https://www.google.com/maps/embed/v1/place?key=<%= Rails.application.secrets.google_api_key %>&q=<%=u @event.location %>"
                   allowfullscreen>
           </iframe>
         </div>
