--- a/app/views/usergroups/_usergroup.html.erb
+++ b/app/views/usergroups/_usergroup.html.erb
@@ -12,6 +12,9 @@
         <p class="flex font-medium text-sm">
           <%= usergroup.name %>
         </p>
+        <p class="flex text-sm text-gray-500">
+          <%= usergroup.description %>
+        </p>
       </div>
       <div class="mt-4 flex-shrink-0 sm:mt-0 sm:ml-5">
         <div class="flex overflow-hidden -space-x-1">
