Show archived in groups

--- a/app/views/usergroups/show.html.erb
+++ b/app/views/usergroups/show.html.erb
@@ -29,7 +29,7 @@
 
 <div class="-m-5 sm:-m-6">
   <% unless @usergroup.description.blank? %>
-    <div class="bg-white rounded-lg shadow p-4 mb-4">
+    <div class="bg-white rounded-lg border-b border-gray-200 p-4 mb-4">
       <div class="text-md text-gray-600">
         <%=simple_format @usergroup.description %>
       </div>
