--- a/app/views/usergroups/index.html.erb
+++ b/app/views/usergroups/index.html.erb
@@ -8,6 +8,40 @@
   <% end %>
 <% end %>
 
-<ul role="list" class="divide-y divide-gray-200 -m-6 rounded-xl">
-  <%= render @usergroups %>
-</ul>
+<div class="-m-5 sm:-m-6">
+  <div data-controller="tabs" data-tabs-active-tab="border-hamers-red-500 text-hamers-red-600 hover:border-hamers-red-600 hover:text-hamers-red-700">
+    <div>
+      <div class="sm:hidden m-4">
+        <label for="tabs" class="sr-only">Select a tab</label>
+        <select id="tabs" name="tabs" class="block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm rounded-md">
+          <option data-action="click->tabs#change" data-index="0">Huidig</option>
+          <option data-action="click->tabs#change" data-index="1">Gearchiveerd</option>
+        </select>
+      </div>
+
+      <div class="hidden sm:block -mt-4">
+        <div class="border-b border-gray-200">
+          <nav class="-mb-px mx-6 flex space-x-8">
+            <button href="#" data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+              Huidig
+            </button>
+            <button data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+              Gearchiveerd
+            </button>
+          </nav>
+        </div>
+      </div>
+    </div>
+
+    <div class="hidden" data-tabs-target="panel">
+      <ul role="list" class="divide-y divide-gray-200 rounded-xl">
+        <%= render @usergroups %>
+      </ul>
+    </div>
+    <div class="hidden" data-tabs-target="panel">
+      <ul role="list" class="divide-y divide-gray-200 rounded-xl">
+        <%= render @archived_usergroups %>
+      </ul>
+    </div>
+  </div>
+</div>
