--- a/app/views/usergroups/_form.html.erb
+++ b/app/views/usergroups/_form.html.erb
@@ -32,7 +32,7 @@
     </div>
     <div class="ml-3 text-sm">
       <%= f.label :archived, "Gearchiveerd", class: "font-medium text-gray-700" %>
-      <span id="comments-description" class="text-gray-500"><span class="sr-only">Archiveer deze groep.</span></span>
+      <span id="comments-description" class="text-gray-500 sr-only">Archiveer deze groep.</span>
     </div>
   </div>
 
