--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -74,7 +74,7 @@
 
         <div class="py-2 sm:py-4 sm:grid sm:grid-cols-3 sm:gap-4">
           <dt class="mx-6 text-sm font-medium text-gray-500 0 sm:col-span-2">
-            Pannenkoek
+            Gepannenkoekt
           </dt>
           <% if current_user&.admin? %>
             <dd class="mx-6 md:mx-2 mt-1 text-sm text-gray-900 sm:mt- flex flex-row">
