--- a/app/views/quotes/edit.html.erb
+++ b/app/views/quotes/edit.html.erb
@@ -8,7 +8,7 @@
     <%= f.label :text %>
     <%= f.text_area :text, class: input_classes %>
 
-    <% unless @quote.anonymous %>
+    <% unless @quote.anonymous? %>
       <%= f.label :user_id %>
       <% users_array = User.all.map { |user| [user.name, user.id] } %>
       <%= f.select :user_id, options_for_select(users_array, @userid), {}, class: select_classes %>
