--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -1,6 +1,6 @@
 <li class="py-4">
   <div class="flex space-x-3 text-sm">
-    <% if quote.anonymous %>
+    <% if quote.anonymous? %>
       <div class="self-center">
         <%= image_tag 'anonymous.svg', class: "w-7 h-7 rounded-full" %>
       </div>
@@ -13,13 +13,13 @@
       <div class="flex flex-col sm:flex-row justify-between self-center">
         <h3 class="flex-grow font-medium"><%= quote.text %></h3>
         <span class="relative z-0 inline-flex rounded-md">
-          <%= unless quote.anonymous
+          <%= unless quote.anonymous?
                 link_to anonymous_quote_path(quote), method: :post, data: { confirm: 'Weet je zeker dat je deze quote wilt anonimiseren? Dit kan je niet ongedaan maken.' }, title: quote.text,
                         class: small_button_classes + ' rounded-l-md' do %>
           <%= image_tag 'anonymous.svg', class: "w-4 h-4" %><span class="sm:hidden">Anonimiseer</span>
             <% end %>
           <% end %>
-          <%= link_to edit_quote_path(quote), class: small_button_classes + (quote.anonymous ? ' rounded-l-md' : '') do %>
+          <%= link_to edit_quote_path(quote), class: small_button_classes + (quote.anonymous? ? ' rounded-l-md' : '') do %>
             <%= heroicon('pencil', class_name: "h-4 w-4") %> <span class="sm:hidden">Wijzigen</span>
           <% end %>
           <%= link_to quote, method: :delete, data: { confirm: 'Weet je het zeker?' }, title: quote.text,
