--- a/app/views/shared/_random_biertje.html.erb
+++ b/app/views/shared/_random_biertje.html.erb
@@ -4,7 +4,7 @@
       <h2 class="text-hamers-red-400 text-xl font-bold mb-4">Citaat van de pagelaad</h2>
       <div class="w-full flex justify-center">
         <div class="w-full flex space-x-3 text-sm">
-          <% if @random_quote.anonymous %>
+          <% if @random_quote.anonymous? %>
             <div class="self-center">
               <%= image_tag 'anonymous.svg', class: "w-7 h-7 rounded-full" %>
             </div>
@@ -18,7 +18,7 @@
               <h3 class="flex-grow font-medium"><%= @random_quote.text %></h3>
             </div>
             <div class="flex flex-col sm:flex-row text-gray-500">
-              <div class="flex-grow"><%= @random_quote.anonymous ? 'Anoniem' : @random_quote.user.name %></div>
+              <div class="flex-grow"><%= @random_quote.anonymous? ? 'Anoniem' : @random_quote.user.name %></div>
               <p><%= time_ago_in_words(@random_quote.created_at) %> geleden.</p>
             </div>
           </div>
