--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -30,7 +30,7 @@
           </span>
       </div>
       <div class="flex flex-col sm:flex-row text-gray-500">
-        <div class="flex-grow"><%= quote.anonymous ? 'Anoniem' : quote.user.name %></div>
+        <div class="flex-grow"><%= quote.anonymous? ? 'Anoniem' : quote.user.name %></div>
         <p><%= time_ago_in_words(quote.created_at) %> geleden.</p>
       </div>
     </div>
