--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -13,13 +13,13 @@
       <div class="flex flex-col sm:flex-row justify-between self-center">
         <h3 class="flex-grow font-medium"><%= quote.text %></h3>
         <span class="relative z-0 inline-flex rounded-md">
-          <%= unless quote.anonymous?
-                link_to quote_anonymou_path(quote), data: { confirm: 'Weet je zeker dat je deze quote wilt anonimiseren? Dit kan je niet ongedaan maken.' }, title: quote.text,
+          <%= if quote.can_be_anonymized_by?(current_user)
+                link_to quote_anonymou_path(quote), method: :put, data: { confirm: 'Weet je zeker dat je deze quote wilt anonimiseren? Dit kan je niet ongedaan maken.' }, title: quote.text,
                         class: small_button_classes + ' rounded-l-md' do %>
             <%=  image_tag 'anonymous.svg', class: "w-4 h-4"  %><span class="sm:hidden">Anonimiseer</span>
-            <%  end  %>
-          <%  end %>
-          <%= link_to edit_quote_path(quote), class: small_button_classes + (!quote.anonymous? ? '' : ' rounded-l-md') do %>
+          <% end %>
+          <%  end  %>
+          <%= link_to edit_quote_path(quote), class: small_button_classes + (quote.can_be_anonymized_by?(current_user) ? '' : ' rounded-l-md') do %>
              <%= heroicon('pencil', class_name: "h-4 w-4") %> <span class="sm:hidden">Wijzigen</span>
           <% end %>
           <%= link_to quote, method: :delete, data: { confirm: 'Weet je het zeker?' }, title: quote.text,
