Add penningmeester email

--- a/app/views/user_mailer/mail_vluchte_bill.html.erb
+++ b/app/views/user_mailer/mail_vluchte_bill.html.erb
@@ -9,6 +9,9 @@
 
   <body>
     <p>Hallo <%= @user.name %>,</p>
-    <!-- TODO -->
+    TODO
+    <p>Mocht je denken dat er iets niet klopt, neem dan contact op met de penningmeester:
+      <a href="mailto:penningmeester@zondersikkel.nl" target="_blank">penningmeester@zondersikkel.nl</a>
+    </p>
   </body>
 </html>
