--- a/app/views/user_mailer/mail_vluchte_bill.text.erb
+++ b/app/views/user_mailer/mail_vluchte_bill.text.erb
@@ -1,3 +1,6 @@
 Hallo <%= @user.name %>,
 
 TODO
+
+Mocht je denken dat er iets niet klopt, neem dan contact op met de penningmeester:
+penningmeester@zondersikkel.nl
