--- a/app/views/stickers/index.html.erb
+++ b/app/views/stickers/index.html.erb
@@ -31,7 +31,7 @@
       icon: '<%= image_path "pin.png" %>',
       map: map,
       optimized: false,
-      title: <% if s.notes.empty? %>'Sticker #<%= s.id %>'<% else %>'<%= s.notes %>'<% end %>,
+      title: <% if s.notes.empty? %>'Sticker #<%= s.id %>'<% else %>'<%= s.notes.gsub(/\n/, ' ') %>'<% end %>,
     });
     <% end %>
   }
