--- a/app/views/users/index_public.html.erb
+++ b/app/views/users/index_public.html.erb
@@ -5,8 +5,8 @@
 <div class="bg-white overflow-hidden shadow rounded-lg mb-8">
   <div class="px-4 pt-5 sm:p-6">
     <figure class="figure">
-            <img src="<%= image_path('members.jpg') %>" class="w-full" alt="Hamers zonder Sikkel - 11 september 2019">
-      <figcaption class="figure-caption">Hamers zonder Sikkel - 25 november 2022.</figcaption>
+            <img src="<%= image_path('members_2024_03_21.jpg') %>" class="w-full" alt="Hamers zonder Sikkel - 11 september 2019">
+      <figcaption class="figure-caption">Hamers zonder Sikkel - 21 maart 2024.</figcaption>
     </figure>
   </div>
 </div>
