--- a/app/views/stickers/index.html.erb
+++ b/app/views/stickers/index.html.erb
@@ -36,5 +36,5 @@
     <% end %>
   }
 </script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= Rails.application.secrets.google_api_key %>&callback=initMap">
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= Rails.application.credentials.google_api_key %>&callback=initMap">
 </script>
