--- a/app/views/shared/_blog.html.erb
+++ b/app/views/shared/_blog.html.erb
@@ -1,8 +1,8 @@
-<div class="bg-white overflow-hidden shadow rounded-lg hidden lg:block">
+<div class="bg-white dark:bg-gray-900 overflow-hidden shadow rounded-lg hidden lg:block">
   <%= link_to blogitems_path do %>
     <h2 class="m-4 text-hamers-red-400 text-xl font-bold">Blogposts</h2>
   <% end %>
-  <ul class="divide-y divide-gray-200 w-full">
+  <ul class="divide-y divide-gray-200 dark:divide-gray-700 w-full">
     <% @blogitems.each do |b| %>
       <li class="py-2 px-4">
         <div class="flex space-x-3">
@@ -11,14 +11,14 @@
           <% end %>
           <div class="flex-1 space-y-1">
             <div class="flex items-center justify-between">
-              <span class="text-sm font-medium"><%= link_to b.title, b %></span>
+              <span class="text-sm dark:text-gray-200 font-medium"><%= link_to b.title, b %></span>
               <% if b.public %>
-                  <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">
+                  <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 dark:bg-blue-600 text-blue-800 dark:text-blue-100">
                     Openbaar
                   </span>
               <% end %>
             </div>
-            <p class="text-sm text-gray-500"><%= time_ago_in_words(b.created_at) %> geleden.</p>
+            <p class="text-sm text-gray-500 dark:text-gray-400"><%= time_ago_in_words(b.created_at) %> geleden.</p>
           </div>
         </div>
       </li>
