--- a/app/views/shared/_random_biertje.html.erb
+++ b/app/views/shared/_random_biertje.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white overflow-hidden md:shadow md:rounded-lg hidden md:block md:p-4">
+<div class="bg-white dark:bg-gray-900 overflow-hidden md:shadow md:rounded-lg hidden md:block md:p-4">
   <% if @random_quote %>
     <div class="mb-2">
       <h2 class="text-hamers-red-400 text-xl font-bold mb-4">Citaat van de pagelaad</h2>
@@ -9,9 +9,9 @@
           <% end %>
           <div class="flex-col flex-1 space-y-1">
             <div class="flex flex-col sm:flex-row space-y-1 justify-between self-center">
-              <h3 class="flex-grow font-medium"><%= @random_quote.text %></h3>
+              <h3 class="flex-grow font-medium dark:text-gray-200"><%= @random_quote.text %></h3>
             </div>
-            <div class="flex flex-col sm:flex-row text-gray-500">
+            <div class="flex flex-col sm:flex-row text-gray-500 dark:text-gray-400">
               <div class="flex-grow"><%= @random_quote.name %></div>
               <p><%= time_ago_in_words(@random_quote.created_at) %> geleden.</p>
             </div>
@@ -34,17 +34,17 @@
         </div>
         <div class="ml-4 w-0 flex-1 items-center h-full">
           <%= link_to @random_beer, class: "flex-shrink-0 group block h-full" do %>
-            <h2 class="align-top font-bold text-xl">
+            <h2 class="align-top font-bold text-xl dark:text-gray-200">
               <%= @random_beer.name %>
             </h2>
-            <h3 class="align-top text-gray-500">
+            <h3 class="align-top text-gray-500 dark:text-gray-400">
               <%= @random_beer.brewer %>
             </h3>
             <div class="col-span-1 flex flex-col justify-between">
               <p class="object-bottom text-xl font-medium text-hamers-red-500">
                 <%= @random_beer.cijfer %>
               </p>
-              <p class="object-bottom text-xs font-medium text-gray-500">
+              <p class="object-bottom text-xs font-medium text-gray-500 dark:text-gray-400">
                 <%= pluralize(@random_beer.reviews.count, 'review', 'reviews') %>
               </p>
             </div>
