--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,8 +1,8 @@
-<div class="hidden bg-white overflow-hidden shadow rounded-lg md:block p-4">
-  <h2 class="text-xl font-bold tracking-tight text-gray-900 mb-4 text-center mt-2">
+<div class="hidden bg-white dark:bg-gray-900 overflow-hidden shadow rounded-lg md:block p-4">
+  <h2 class="text-xl font-bold tracking-tight text-gray-900 dark:text-gray-200 mb-4 text-center mt-2">
     Welkom <span class="text-hamers-red-400"><%= current_user.name %></span>
   </h2>
-  <p class="block font-semibold text-justify">
+  <p class="block font-semibold text-justify dark:text-gray-200">
     Je bent
     <% if current_user.alid? %>
       <span class="text-hamers-red-400">feut</span>,
