--- a/app/views/shared/_next_event.html.erb
+++ b/app/views/shared/_next_event.html.erb
@@ -1,17 +1,17 @@
 <div class="overflow-hidden md:shadow md:rounded-lg md:p-4">
   <h1 class="text-hamers-red-400 text-xl font-bold">Volgende activiteit</h1>
   <% if @next_event %>
-    <h2 class="font-bold tracking-tight text-gray-900 dark:text-gray-200 text-2xl text-justify">
+    <h2 class="font-bold tracking-tight text-gray-900 text-2xl text-justify">
       <%= link_to @next_event.title, @next_event %>
     </h2>
-    <h3 class="text-gray-600 dark:text-gray-400">
+    <h3 class="text-gray-600">
       <%= @next_event.past? ? "Activiteit is bezig" : 
         "Over #{time_ago_in_words(@next_event.date)}" %>
     </h3>
     <div class="mt-8 flex">
       <div class="inline-flex rounded-md shadow w-full">
         <% if @signup %>
-          <button class="cursor-pointer w-full text-center p-4 border border-transparent text-base font-medium rounded-md text-gray-500 dark:text-gray-400 bg-gray-50 dark:bg-gray-700">
+          <button class="cursor-pointer w-full text-center p-4 border border-transparent text-base font-medium rounded-md text-gray-500 bg-gray-50">
             <%= @signup&.status ? "Je hebt je al ingeschreven! 👍" : "Je hebt je uitgeschreven." %>
           </button>
         <% elsif @next_event.open? %>
