--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -32,7 +32,7 @@
   Moneybird: { url: 'https://moneybird.com/275570381306201797', icon: 'fa fa-coins' }
 } %>
 
-<nav class="bg-gray-900">
+<nav class="bg-gray-900 dark:bg-black">
   <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
     <div class="border-b border-gray-700">
       <div class="flex items-center justify-between h-16 px-4 sm:px-0">
@@ -55,30 +55,30 @@
                      data-dropdown-enter-timeout="300"
                      data-dropdown-leaving-class="ease-in duration-100"
                      data-dropdown-leave-timeout="300">
-                  <button class="text-gray-300 px-3 py-2 rounded-md text-sm font-medium" data-action="click->dropdown#toggle click@window->dropdown#hide" id="leden-menu">
+                     <button class="text-gray-300 dark:text-gray-200 px-3 py-2 rounded-md text-sm font-medium" data-action="click->dropdown#toggle click@window->dropdown#hide" id="leden-menu">
                     <%= heroicon('menu', style: :outline, class_name: "block h-6 w-6") %>
                   </button>
 
                   <div class="absolute z-50 -ml-4 mt-2 transform px-2 w-screen max-w-md sm:px-0 lg:ml-0 lg:left-1/2 lg:-translate-x-1/2 opacity-0 scale-95" data-dropdown-target="menu">
                     <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 overflow-hidden">
-                      <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8 lg:grid-cols-2">
+                    <div class="relative grid gap-6 bg-white dark:bg-gray-900 px-5 py-6 sm:gap-8 sm:p-8 lg:grid-cols-2">
                         <% menu_items.each do |name, options| %>
                           <%= link_to options[:path], class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
                             <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                               <%= heroicon(options[:icon], style: :outline, class_name: "h-6 w-6") %>
                             </div>
                             <div class="ml-4">
-                              <p class="text-base font-medium text-gray-900"><%= name %></p>
-                              <p class="mt-1 text-sm text-gray-500"><%= options[:description] %></p>
+                              <p class="text-base font-medium text-gray-900 dark:text-gray-200"><%= name %></p>
+                              <p class="mt-1 text-sm text-gray-500 dark:text-gray-400"><%= options[:description] %></p>
                             </div>
                           <% end %>
                         <% end %>
                       </div>
 
-                      <div class="justify-center px-5 py-5 bg-gray-50 space-y-6 sm:flex sm:space-y-0 sm:space-x-10 sm:px-8">
+                      <div class="justify-center px-5 py-5 bg-gray-50 dark:bg-black space-y-6 sm:flex sm:space-y-0 sm:space-x-10 sm:px-8">
                         <% external_links.each do |_, options| %>
                           <div class="flow-root">
-                            <%= link_to options[:url], target: :blank, class: "-m-3 p-1 flex items-center rounded-md text-base font-medium text-gray-500 hover:bg-gray-100 transition ease-in-out duration-150" do %>
+                            <%= link_to options[:url], target: :blank, class: "-m-3 p-1 flex items-center rounded-md text-base font-medium text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 transition ease-in-out duration-150" do %>
                               <span class="m-1"><i class="fa-fw <%= options[:icon] %>"></i></span>
                             <% end %>
                           </div>
