--- a/app/views/events/_list.html.erb
+++ b/app/views/events/_list.html.erb
@@ -1,23 +1,23 @@
-<div class="bg-white overflow-hidden sm:rounded-md">
-  <ul role="list" class="divide-y divide-gray-200">
+<div class="bg-white dark:bg-gray-900 overflow-hidden sm:rounded-md">
+  <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
     <% events.each do |event| %>
       <li>
-        <%= link_to event, class: "block hover:bg-gray-50" do %>
+        <%= link_to event, class: "block hover:bg-gray-50 dark:hover:bg-gray-800" do %>
           <div class="px-4 py-4 flex items-center sm:px-6">
             <div class="min-w-0 flex-1 sm:flex sm:items-center sm:justify-between">
               <div class="truncate">
                 <div class="text-sm min-w-0 flex-1 sm:flex sm:items-center">
                   <div class="flex">
-                    <p class="font-medium text-gray-900 truncate"><%= event.title %></p>
+                    <p class="font-medium text-gray-900 dark:text-gray-200 truncate"><%= event.title %></p>
                   </div>
                   <div class="flex flex-shrink-0 text-sm">
                     <% if event.public? %>
-                      <p class="md:ml-2 inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">
+                      <p class="md:ml-2 inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 dark:bg-blue-600 text-blue-800 dark:text-blue-100">
                         Publiek
                       </p>
                     <% end %>
                     <% if event.usergroup %>
-                      <p class="md:ml-2 inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800">
+                      <p class="md:ml-2 inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 dark:bg-yellow-600 text-yellow-800 dark:text-yellow-100">
                         <%= event.usergroup.name %>
                       </p>
                     <% end %>
